<resources>
    <string name="app_name">Nam Keep - Ghi chú và danh sách</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nam</string>
    <string name="nav_header_subtitle">Keep</string>
    <string name="nav_header_desc">Navigation logo</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_checkbox">Thêm hộp kiểm</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="action_account">Tài khoản</string>
    <string name="action_image">Thêm ảnh</string>
    <string name="action_add_note">Thêm ghi chú</string>
    <string name="action_reminder">Lời nhắc</string>
    <string name="action_brush">Thêm bản vẽ</string>
    <string name="action_mic">Thêm âm thanh</string>
    <string name="action_note_image">Thêm hình ảnh</string>
    <string name="action_note_brush">Bản vẽ</string>
    <string name="action_note_mic">Chuyển giọng nói thành văn bản</string>
    <string name="action_note_recording">Ghi âm</string>
    <string name="action_note_checkbox">Hộp kiểm</string>
    <string name="action_note_delete">Xóa</string>
    <string name="action_note_share">Gửi</string>
    <string name="action_note_account">Cộng tác viên</string>
    <string name="action_note_label">Nhãn</string>
    <string name="title_bottom_sheet_color_note">Màu</string>
    <string name="title_bottom_sheet_image_note">Hình nền</string>

    <string name="edit_text_email_login">Email</string>
    <string name="edit_text_password_login">Mật khẩu</string>
    <string name="button_login">Đăng nhập</string>
    <string name="text_view_signup_login">Đăng ký Nam Keep</string>
    <string name="text_view_forgot_login">Quên mật khẩu?</string>

    <string name="edit_text_name_signup">Họ và tên</string>
    <string name="edit_text_password_confirmation_signup">Xác nhận mật khẩu</string>
    <string name="button_signup">Đăng ký</string>
    <string name="text_view_back_login_signup">Quay lại đăng nhập</string>

    <string name="button_undo_paint">Hoàn tác</string>
    <string name="button_save_paint">Lưu bản vẽ</string>
    <string name="button_color_paint">Chọn màu</string>
    <string name="button_stroke_paint">Kích thước</string>

    <string name="button_recording_finish">Hoàn thành</string>

    <string name="menu_home">Ghi chú</string>
    <string name="menu_reminder">Lời nhắc</string>
    <string name="menu_label">Nhãn</string>
    <string name="menu_archive">Lưu trữ</string>
    <string name="menu_setting">Cài đặt</string>
    <string name="title_menu_other">Khác</string>

    <string name="edit_text_add_label">Tạo nhãn mới</string>
    <string name="edit_text_search_label">Nhập tên nhãn</string>

    <string name="button_continue_picker">Tiếp tục</string>
    <string name="button_set_picker">Lưu</string>

    <string name="edit_text_search_email">Nhập email</string>
    <string name="edit_text_search_note">Tìm kiếm ghi chú</string>

    <string name="button_save_profile">Cập nhật thông tin</string>
    <string name="text_logout">Đăng xuất</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Nam Keep</string>
    <string name="appwidget_text">Phím tắt ghi chú</string>
    <string name="add_widget">Tiện ích ghi chú nhanh</string>
    <string name="app_widget_description">Đây là ứng dụng ghi chứ nhanh Nam Keep</string>
</resources>