<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:color="#009688" android:state_checked="true"
            android:icon="@drawable/ic_baseline_lightbulb_circle_24"
            android:iconTint="?attr/colorControlNormal"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_outline_notifications_24"
            android:title="@string/menu_reminder" />
        <item
            android:id="@+id/nav_label"
            android:icon="@drawable/ic_outline_label_24"
            android:title="@string/menu_label" />
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_outline_archive_24"
            android:title="@string/menu_archive" />
    </group>

    <item android:title="@string/title_menu_other">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_outline_settings_24"
                android:title="@string/menu_setting" />
        </menu>
    </item>
</menu>