<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_add_check_box"
        android:icon="@drawable/ic_outline_check_box_24"
        android:title="@string/action_add_checkbox"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/home_add_brush"
        android:icon="@drawable/ic_outline_brush_24"
        android:title="@string/action_brush"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/home_add_mic"
        android:icon="@drawable/ic_baseline_mic_none_24"
        android:title="@string/action_mic"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/home_add_image"
        android:icon="@drawable/ic_outline_image_24"
        android:title="@string/action_image"
        app:showAsAction="always"
        />
</menu>