<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nam.keep.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_reminder"
        android:name="com.nam.keep.ui.reminder.ReminderFragment"
        android:label="@string/menu_reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/nav_label"
        android:name="com.nam.keep.ui.label.LabelFragment"
        android:label="@string/menu_label"
        tools:layout="@layout/fragment_label" />
</navigation>