<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/icon_logo_size"
        android:layout_height="@dimen/icon_logo_size"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/ic_baseline_lightbulb_circle_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/nav_header_horizontal_spacing"
        android:theme="@style/Theme.Keep"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/text_logo_size"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Keep"
        android:text="@string/nav_header_subtitle"
        android:textSize="@dimen/text_logo_size"
        tools:ignore="SpUsage" />
</LinearLayout>