<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:rsv="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.paint.PaintActivity">

  <LinearLayout
      android:id="@+id/linear"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

      <ImageButton
          android:id="@+id/btn_undo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_round_undo_24"
          android:text="@string/button_undo_paint" />

      <ImageButton
          android:id="@+id/btn_save"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_outline_save_24"
          android:text="@string/button_save_paint" />

      <ImageButton
          android:id="@+id/btn_color"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_outline_palette_24"
          android:text="@string/button_color_paint" />

      <ImageButton
          android:id="@+id/btn_stroke"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_outline_brush_24"
          android:text="@string/button_stroke_paint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <com.google.android.material.slider.RangeSlider
          android:id="@+id/rangebar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:theme="@style/Widget.App.Slider"
          android:visibility="gone" />

    </LinearLayout>

  </LinearLayout>

  <com.nam.keep.ui.paint.DrawView
      android:id="@+id/draw_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/linear"
      android:layout_centerInParent="true" />

</RelativeLayout>