<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_delete_note"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_delete_24"
            android:contentDescription="@string/action_note_delete"
            tools:ignore="UseAppTint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/action_note_delete"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_share_note"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_share_24"
            android:contentDescription="@string/action_note_share"
            tools:ignore="UseAppTint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/action_note_share"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_person_note"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_person_add_alt_24"
            android:contentDescription="@string/action_note_account"
            tools:ignore="UseAppTint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/action_note_account"
            android:layout_marginStart="24dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_label_note"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_label_24"
            android:contentDescription="@string/action_note_label"
            tools:ignore="UseAppTint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/action_note_label"
            android:layout_marginStart="24dp"/>

    </LinearLayout>
</LinearLayout>