<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:backgroundTint="?attr/colorPrimaryVariant"
        android:outlineProvider="none">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_profile"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/color_background_imaged"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                app:riv_border_color="?attr/colorControlNormal"
                app:riv_border_width="1dp"
                app:riv_corner_radius="50dp"
                app:riv_mutate_background="true"
                tools:ignore="MissingConstraints"
                android:src="@drawable/ic_baseline_account_circle_24"
                android:layout_gravity="center"/>
            <EditText
                android:id="@+id/edit_text_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#d3d3d3"
                android:hint="@string/edit_text_name_signup"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="#d3d3d3" />

            <EditText
                android:id="@+id/edit_text_email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#d3d3d3"
                android:hint="@string/edit_text_email_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp"
                android:textColorHint="#d3d3d3"
                android:enabled="false"/>

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="#ADF4B400"
                android:padding="10dp"
                android:text="@string/button_save_profile"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>